# ChangeLog for media-plugins/audacious-plugins
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/audacious-plugins/ChangeLog,v 1.227 2011/11/15 18:27:02 jer Exp $

  15 Nov 2011; Jeroen Roovers <jer@gentoo.org> audacious-plugins-3.1.ebuild:
  Stable for HPPA (bug #383991).

  15 Nov 2011; Tony Vroon <chainsaw@gentoo.org> audacious-plugins-3.1.ebuild:
  Marked stable on AMD64 based on arch testing by Agostino "ago" Sarubbo &
  Elijah "Armageddon" El Lazkani in security bug #383991.

  14 Nov 2011; Tony Vroon <chainsaw@gentoo.org> audacious-plugins-3.0.3.ebuild,
  audacious-plugins-3.1.ebuild:
  Do not try to set non-existent configure option; from arch testing by
  Agostino "ago" Sarubbo.

  14 Nov 2011; Tony Vroon <chainsaw@gentoo.org> audacious-plugins-3.0.3.ebuild,
  audacious-plugins-3.1.ebuild:
  Missed dependency due to internal/external library changes.

*audacious-plugins-3.1 (14 Nov 2011)

  14 Nov 2011; Tony Vroon <chainsaw@gentoo.org> audacious-plugins-3.0.3.ebuild,
  +audacious-plugins-3.1.ebuild:
  Version bump, as requested by J.D. Horelick on IRC. Make GTK+ dependency
  suitably strict.

  11 Oct 2011; Jeroen Roovers <jer@gentoo.org> audacious-plugins-2.5.4.ebuild:
  Stable for HPPA (bug #380575).

  23 Sep 2011; Tony Vroon <chainsaw@gentoo.org> audacious-plugins-3.0.3.ebuild:
  Remove obsolete USE-flags as per Joost Ruis in bug #384171.

  22 Sep 2011; Tony Vroon <chainsaw@gentoo.org> audacious-plugins-3.0.3.ebuild,
  metadata.xml:
  That was indeed the core ebuild and not the plugins ebuild. My apologies, and
  thanks to robbat2 for pointing it out.

*audacious-plugins-3.0.3 (22 Sep 2011)

  22 Sep 2011; Tony Vroon <chainsaw@gentoo.org>
  -audacious-plugins-3.0.2.ebuild, +audacious-plugins-3.0.3.ebuild,
  metadata.xml:
  Version bump. Ebuild improvements by Agostino "ago" Sarubbo close bugs
  #380577, #383357 & #383649. Remove vulnerable version for security bug
  #383991.
