@@ -1,4 +1,4 @@
-DIST audacious-plugins-3.1.tar.bz2 2156993 RMD160 b62f8724a7babb53d4e2d70fb91edda0e42f82d7 SHA1 0c89d5a74bb562c38be36d38537d15c3374feb76 SHA256 2d1e9b229b83e4ab2a2065e7116d0d36e774d73146d2cb63162ca880770d7ca8
-EBUILD audacious-plugins-3.1.ebuild 3312 RMD160 30224163699ab15de2bc91d7f5b46e5f23317be8 SHA1 09a49ca497b51ee4c49d48f3f308faf439889714 SHA256 a67de89a84919c9b6c22d3212d9574747000afd1a5bd1118a05ad173c9588b8b
-MISC ChangeLog 47573 RMD160 3c5c27197997370780cdc06e511aacbe0a40f103 SHA1 5d6f85a8b8622a1a27a1414953ac2a6531609f56 SHA256 b5a44ec68c4aa739ba25a1baa3caab9fc0c6cfc9497112b0c39209dc46971230
+DIST audacious-plugins-3.1.1.tar.bz2 2167856 RMD160 8c0fca652b08884809271afb401990cda7c24eaf SHA1 49cdae9eedd99cfc2ce7455498ee2ec6c9ff6f20 SHA256 dd85e982a49a2794041a391aba3d12a12505338b2c9623b60f16842ae89215ad
+EBUILD audacious-plugins-3.1.1.ebuild 3323 RMD160 cf00647f5b0679c61e2524ee9be8ddbf00b8abc2 SHA1 4be542b8b2052747d70375224ddcfc38f23fc25b SHA256 cc58e3a19c530b1dae586ff852e2b1c188e3f04ebd6b57c0cedb70e3c8645d10
+MISC ChangeLog 47863 RMD160 e961d67593ca6a75137af84747220be5ae0820b1 SHA1 33122b671b3092b32f8fcbdf95839cb9cb9f0f9e SHA256 37412e5aef15926cc32b20af9aa762062105ea012dd4567db291149d9fbaa6be
 MISC metadata.xml 793 RMD160 6ed971d5b4c08275c3f0cad7f599431231d6d6e6 SHA1 73ed2881b74c9beaec7c99f8ca5e2f84d1a65b58 SHA256 487034ec4c5105e48198d65eeb4f3ba2600ebdb5d771e557a8d44e6d6a07fb48
