@@ -1,6 +1,16 @@
 # ChangeLog for media-plugins/audacious-plugins
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/audacious-plugins/ChangeLog,v 1.227 2011/11/15 18:27:02 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/audacious-plugins/ChangeLog,v 1.229 2011/12/07 13:46:51 phajdan.jr Exp $
+
+  07 Dec 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  audacious-plugins-3.1.ebuild:
+  x86 stable wrt security bug #383991
+
+*audacious-plugins-3.1.1 (05 Dec 2011)
+
+  05 Dec 2011; Tony Vroon <chainsaw@gentoo.org>
+  +audacious-plugins-3.1.1.ebuild:
+  New release on the 3.1 branch.
 
   15 Nov 2011; Jeroen Roovers <jer@gentoo.org> audacious-plugins-3.1.ebuild:
   Stable for HPPA (bug #383991).
